--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "multilevel-http",
-  "version": "0.0.3",
-  "description": "Access a leveldb instance from multiple processes via HTTP",
+  "name": "multilevel-http-temp",
+  "version": "0.0.4",
+  "description": "Temporary multilevel http package",
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test mocha"
